# py-bcp-utils

./: README.md  pyproject.toml
bcp_utils/: __init__.py  bulk_insert.py  xml_builder.py
bcp_utils/converters/: __init__.py  functions.py
