[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-bcp-utils"
version = "1.1.0"
authors = [
  { name="João Afonso", email="contact.joaoafonso@gmail.com" },
]
description = "A utility to run fast BCP bulk inserts from a Pandas DataFrame, including CSV and high-speed native format."
readme = "README.md"
requires-python = ">=3.8"

license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.20.0",
]

[project.urls]
github = "https://github.com/Afonso-13/py-bcp-utils"
